--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,9 @@ typing_extensions==4.15.0
 uvicorn==0.38.0
 watchfiles==1.1.1
 websockets==15.0.1
+openai-whisper==20231117
+groq==0.13.0
+spacy==3.7.2
+pydub==0.25.1
+torch==2.1.0
+torchaudio==2.1.0
